--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,19 +10,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^1.7.2",
     "core-js": "^3.6.5",
     "moment": "^2.30.1",
+    "ol": "^9.2.4",
     "vue": "^2.6.11",
     "vue-router": "^3.6.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.32.0",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.7",
     "sass-loader": "^10.1.1"
